# despan

./: .gitignore  README.md  pyproject.toml
DeSpAn/: __init__.py  cli.py  config.py  core.py  data_io.py  geometry.py
DeSpAn/conf/: default_config.yaml  specific_config.yaml
DeSpAn/conf/m3c2/: m3c2_params_0.2_0.2_2_proj_0.3.txt
docs/source/: DeSpAn.rst  conf.py  index.rst  modules.rst
src/DeSpAn/: cli.py  config.py  core.py  data_io.py  default_config.yaml  run.py  specific_config.yaml
src/DeSpAn/conf/: default_config.yaml  specific_config.yaml
src/DeSpAn/conf/m3c2/: HSV_5mm.xml
