[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "DeSpAn"
description = "Short description of DeSpAn"
requires-python = "~=3.11"
keywords = ["LiDAR", "Deformation Analy"]
license = {text = "Proprietary"}
authors = [
	{name = "Nicholas Meyer"},
	{email = "meyernic@ethz.ch"},
]
dynamic = ["version", "readme"]
classifiers = [
	"Programming Language :: Python :: 3",
	"Private :: Do Not Upload" # REMOVE BEFORE FLIGHT -- PyPI will always reject packages with classifiers beginning with Private ::
]
dependencies = [
	"numpy ~= 1.23",
	"plyfile ~= 0.7",
	"laspy[lazrs,laszip] ~= 2.2",
	"PyYAML ~= 6.0",
	"omegaconf ~= 2.2",
	"hydra-core ~= 1.2",
	"alphashape ~= 1.3"
]

[tool.setuptools.dynamic]
version = {attr = "DeSpAn.__version__"}
readme = {file = ["README.md"]}

[project.urls]
homepage = "https://gseg.igp.ethz.ch/"
#documentation = "https://google.com"
repository = "https://gseg-ethz.github.com/DeSpAn"

[project.scripts]
DeSpAn = "DeSpAn.cli:main"

[project.optional-dependencies]
doc = ["sphinx ~= 5.1"]
dev = ["black ~= 22.10"]
